# modern_python_demo

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
modern_python_demo/: __init__.py  __main__.py  cache.py  config.py  contextmanagers.py  decorators.py  errors.py  events.py  interfaces.py  introspect.py  main.py  metaclasses.py  models.py  pipelines.py  plugin_loader.py  plugins.py  serialization.py
modern_python_demo/plugins/: __init__.py  sample_plugin.py
scripts/: create_repo.ps1  run_demo.bat  run_demo.ps1  run_demo.sh
tests/: test_core.py
tools/: bump_version.py
