[project]
name = "modern_python_demo"
version = "0.1.0"
description = "A pedagogical demo of advanced modern Python features"
requires-python = ">=3.10"

[project.dependencies]
attrs = "^23.1"
PyYAML = "^6.0"
rich = "^13.0"
pytest = "^7.0"

[tool.poetry]

[build-system]
requires = ["setuptools>=42", "wheel"]
build-backend = "setuptools.build_meta"
